implement episode filtering by release date